--- a/result.html
+++ b/result.html
@@ -452,11 +452,11 @@
       win: {
         main: "あたり",
         sub: "これが奇跡だ。日頃の行いの結果だな。",
-        note: "スタッフにこの画面を提示すればチーズトッピング無料！"
+        note: "せっかく当たったんだし行ってみようよ"
       },
       lose: {
         main: "はずれ",
-        sub: "そうか。俺もまだない。ポスターはまだある。そう気を落とすな",
+        sub: "ポスターはまだある。そう気を落とすな",
         note: "ポスターは全部で９枚ある。"
       }
     },
@@ -464,19 +464,19 @@
       win: {
         main: "あたり",
         sub: "どうですか。せっかくですし、一度、買われていきませんか？",
-        note: "この画面を提示すればチーズトッピングが無料で付けられますよ。"
+        note: "この画面を見たあなたは運気が上昇します。"
       },
       lose: {
         main: "はずれ",
         sub: "おや、残念ですね。せっかくですし、他のポスターも探してみましょう。当たるかもしれません。",
-        note: "ポスターは全部で９枚あるそうですよ。噂によるとシークレット…っと、これはまだ秘密にしておきましょうか。"
+        note: "ポスターは全部で９枚あるそうですよ。残りも探してみましょう"
       }
     },
     "C": {
       win: {
         main: "あたり",
-        sub: "やったなおい！トッピングしてもらって他の人にも自慢しにいこうぜ！",
-        note: "この画面見せれば無料でトッピングしてもらえるんだってよ！早く行こうぜ！"
+        sub: "やったなおい！トッピングとか付けて楽しんじゃおうぜ大学祭！",
+        note: "何してんだよ！早く行こうぜ！"
       },
       lose: {
         main: "はずれ",
@@ -487,8 +487,8 @@
     "D": {
       win: {
         main: "あたり！",
-        sub: "えやったじゃん！運良いね～！えっと、ちょっと待ってね、あ、あったあった",
-        note: "「この画面をみせればチーズトッピング無料」…だってさ！早く行こ！"
+        sub: "えやったじゃん！運良いね～！",
+        note: "早く行こ！"
       },
       lose: {
         main: "はずれ",
@@ -499,61 +499,61 @@
     "E": {
       win: {
         main: "あたり",
-        sub: "今を楽しもう。せっかく当たったんだし、食べてみない？",
-        note: "この画面を提示でチーズトッピング無料"
+        sub: "風から牛串の匂いを感じる。",
+        note: "ダンスパフォーマンス見た？ダンスサークルの方じゃなくて"
       },
       lose: {
         main: "はずれ",
-        sub: "またチャレンジしてください！",
-        note: ""
+        sub: "そんな…せっかく手に入れたのに…",
+        note: "ここに立ってても、相手はやってこないよ"
       }
     },
     "F": {
       win: {
-        main: "💎 大当たり！",
-        sub: "特別トッピングをプレゼント！",
-        note: "スタッフに画面提示をお願いします"
+        main: "あたり",
+        sub: "運が良いね。あとは大学祭を楽しむだけだ",
+        note: "いっそのこと全部見て回ろうぜ"
       },
       lose: {
-        main: "❗ はずれです",
-        sub: "次回も挑戦してください！",
-        note: ""
+        main: "はずれ…た…",
+        sub: "盤石も…いつか土に還る…",
+        note: "旅はいつか終わりを迎える。慌てる必要はない。"
       }
     },
     "G": {
       win: {
-        main: "🎊 あたり！",
-        sub: "無料トッピングをどうぞ！",
-        note: "スタッフに画面をお見せください"
+        main: "あたり",
+        sub: "次はどこへ行くんだ？模擬店を巡りたいなら、良い案がいくつかあるぞ",
+        note: "まずは牛串からだ"
       },
       lose: {
-        main: "🚫 はずれ…",
-        sub: "次回の挑戦をお待ちしています",
-        note: ""
+        main: "はずれ…",
+        sub: "雨の日はぼーっとするのにピッタリ",
+        note: "いい景色だね。休憩中にこの景色を絵にしようか"
       }
     },
     "H": {
       win: {
-        main: "🔥 あたり！",
-        sub: "特別サービスを獲得しました！",
-        note: "スタッフに画面を見せてください"
+        main: "あたり",
+        sub: "たまにはノンビリするのも悪くないな",
+        note: "休息時に、次の計画を練ろう"
       },
       lose: {
-        main: "❌ はずれです",
-        sub: "また挑戦してください！",
-        note: ""
+        main: "はずれ",
+        sub: "敗者には…言い訳の余地もない…",
+        note: "チクショウ…"
       }
     },
     "I": {
       win: {
-        main: "⚡ 大当たり！",
-        sub: "トッピング無料ゲット！",
-        note: "スタッフに画面を提示してください"
+        main: "あたり",
+        sub: "「風が目覚め、落ち葉を載せて旅に出る…」",
+        note: "目を閉じて。"
       },
       lose: {
-        main: "✖️ はずれ…",
-        sub: "次のチャンスをお楽しみに！",
-        note: ""
+        main: "はずれ",
+        sub: "夢なき眠りへようこそ。",
+        note: "足元をすくわれませんよう。"
       }
     }
   };
